# nodever

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: cli.rs  detail.rs  enums.rs  functions.rs  lib.rs  main.rs  pjson_detail.rs  print.rs  semver.rs  traits.rs
src/lib/: cli.rs  mod.rs  pjson_detail.rs  semver.rs
src/lib/node_module/: diffed_pair.rs  global.rs  global_module.rs  mod.rs  required_by.rs  standard.rs  standard_module.rs
src/node_module/: diff_module.rs  diffed_pair.rs  global_module.rs  mod.rs  standard_module.rs
src/types/: application_detail.rs  cli.rs  dependency_detail.rs  detail.rs  mod.rs  output_schema.rs  pjson_detail.rs
