[package]
name = "nodever"
version = "0.4.0"
authors = ["@thorning_m <matthewthorning@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0.91", features = ["derive"] }
regex = "1.3.1"
prettytable-rs = "^0.8"
