[package]
name = "nodever"
version = "2.1.1"
authors = ["@thorning_m <matthewthorning@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0.91", features = ["derive"] }
regex = "1.3.1"
prettytable-rs = "^0.8"
which = "4.1.0"
once_cell = "1.3.1"

[lib]
name = "library"
path = "src/lib/mod.rs"
